EventsAlumni/force-app/main/default/objects/Event_Target_Audience__c/Event_Target_Audience__c.object-meta.xml
<CustomObject>
    <label>Event Target Audience</label>
    <nameField>
        <displayFormat>ETA-{000000}</displayFormat>
        <label>Event Target Audience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Target Audiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>