EventsAlumni/force-app/main/default/objects/Event_Target_Audience__c/fields/ConstituentRole__c.field-meta.xml
<CustomField>
    <fullName>ConstituentRole__c</fullName>
    <label>ConstituentRole</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>