EventsAlumni/force-app/main/default/objects/Event_Target_Audience__c/fields/Event_Master__c.field-meta.xml
<CustomField>
    <fullName>Event_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Master</label>
    <referenceTo>Event_Master__c</referenceTo>
    <relationshipLabel>Event Target Audiences</relationshipLabel>
    <relationshipName>Event_Target_Audiences</relationshipName>
    <type>Lookup</type>
</CustomField>