EventsAlumni/force-app/main/default/objects/Event_Target_Audience__c/fields/Invite_All__c.field-meta.xml
<CustomField>
    <fullName>Invite_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite All</label>
    <type>Checkbox</type>
</CustomField>