EventsAlumni/force-app/main/default/objects/Event_Target_Audience__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>